    - CVE-2018-15518: “double free or corruption” in QXmlStreamReader
    - CVE-2018-19873: QBmpHandler segfault on malformed BMP file
    - CVE-2018-19870: Check for QImage allocation failure in qgifhandler

  [ Simon Quigley ]
  * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
  * Bump Standards-version to 4.3.0, no changes needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 18:57:13 -0300

qtbase-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium

  * Revert the switch of arm64 to OpenGL ES as a result of
    <https://lists.debian.org/debian-devel/2018/11/msg00457.html>
  * New upstream release.
    - Bump Qt build dependencies.
    - Bump qtbase-abi to 5-11-3.
  * Fix typo in previous changelog entry.
  * Delete dont_get_screen_rotation.diff, already applied upstream.
  * Refresh patches.
  * Delete ssl_max_version.diff. Applied upstream with some changes.
  * Create and apply revert_remove_our_use_of_syscall_for-statx.patch. This is
    needed for Qt to work with Stretch machines running testing/unstable
    chroots but Stretch's kernel.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 05 Dec 2018 20:54:37 -0300

qtbase-opensource-src (5.11.2+dfsg-8) experimental; urgency=medium

  * Switch arm64 to use OpenGL ES instead of desktop OpenGL (Closes: #881333).
    - Rename libqt5gui5 to libqt5gui5a.
      - Add Breaks+Replaces against libqt5gui5 << 5.11.2+dfsg-8~. This
        avoids co-installation of the library.
      - Change all related dependencies to new binary name.
      - Add a lintian override for package name does not match soname warning.
    - Adjust arch qualifications for required packages.
    - debian/rules: add arm64 to gles2_architectures.
    - Rename debian/libqt5gui5 files to their libqt5gui5a counterparts,
      modifying them when necessary.
    - Update symbols files arch qualifications accordingly.
  * Update symbols files with buildds' logs.
