@@ -200,7 +200,7 @@ override_dh_auto_build-indep:
 override_dh_auto_build-arch:
 	# Bootstrap corelibs in order to be able to build the helper tools to
 	# regenerate some upstream-provided files.
-	cd $(CURDIR)/src; ../bin/qmake; make sub-corelib
+	cd $(CURDIR)/src; ../bin/qmake; $(MAKE) sub-corelib
 	# Add here the code to generate the helpers and then the headers.
 	LC_ALL=C.UTF-8 sh debian/generateTLDs.sh
 	# Rebuild only the object file that used the generated header.
@@ -216,11 +216,11 @@ ifeq ($(DEB_HOST_ARCH_CPU),i386)
 	install -d debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/sse2/
 
 	# corelib needs make clean first to be able to rebuild.
-	cd $(CURDIR)/src/corelib; make clean ; ../../bin/qmake -config sse2; make
+	cd $(CURDIR)/src/corelib; $(MAKE) clean; ../../bin/qmake -config sse2; $(MAKE)
 	cp -av lib/libQt5Core.so.* debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/sse2/
 
 	# gui on turn doesn't needs it, and actually fails if done.
-	cd $(CURDIR)/src/gui; ../../bin/qmake -config sse2; make
+	cd $(CURDIR)/src/gui; ../../bin/qmake -config sse2; $(MAKE)
 	cp -av lib/libQt5Gui.so.* debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/sse2/
 endif
 
