@@ -10,6 +10,9 @@ qtbase-opensource-src (5.11.3+dfsg-2) UNRELEASED; urgency=medium
   * Change my email to tsimonq2@debian.org now that I am a Debian Developer.
   * Bump Standards-version to 4.3.0, no changes needed.
 
+  [ Dmitry Shachnev ]
+  * Use $(MAKE) instead of make in debian/rules for parallelization.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Dec 2018 18:57:13 -0300
 
 qtbase-opensource-src (5.11.3+dfsg-1) experimental; urgency=medium
